# spacetec

./: .roomodes  AGENTS.md  IMPLEMENTATION_SUMMARY.md  INCOMPLETE_TASKS_COMPLETED.md  MINIMUM_FEATURE_COMPLETE.md  SPRINT_1_2_COMPLETION.md  build.gradle.kts  design.md  gradle.properties  local.properties  requirements.md  settings-simple.gradle.kts  settings.gradle.kts  stra.txt  tasks.md
.qoder/agents/: automotive-quality-analyst.md  codebase-secret-finder.md
.qwen/agents/: j2534-passthru-api-specialist.md  obd-protocol-implementation.md  obd2-quality-analyst.md  protocol-core-impl.md  scanner-impl-agent.md  spacetec-quality-analyst.md  uds-protocol-implementer.md
.roo/: mcp.json
app/: build.gradle.kts  detekt-baseline.xml
buildSrc/: build.gradle.kts
config/detekt/: detekt.yml
core/common/: build.gradle.kts  detekt-baseline.xml
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/datastore/: build.gradle.kts  detekt-baseline.xml
core/domain/: build.gradle.kts  detekt-baseline.xml
core/logging/: build.gradle.kts  detekt-baseline.xml
core/network/: build.gradle.kts  detekt-baseline.xml
core/security/: build.gradle.kts  detekt-baseline.xml
core/ui/: build.gradle.kts  detekt-baseline.xml
data/: build.gradle.kts
domain/: build.gradle.kts
features/bidirectional/: build.gradle.kts  consumer-rules.pro
features/coding/: build.gradle.kts  (+1 more)
gradle/: libs.versions.toml
j2534/: README.md  build.gradle.kts
j2534/src/main/jni/: Android.mk  CMakeLists.txt  j2534_jni.cpp  j2534_jni.h  j2534_native.cpp  j2534_native.h
(+485 files in other folders)
